# GCAPI-Backend

./: .coveragerc  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  README.md  SECURITY.md  alembic-env.py  alembic.ini  build.py  cli.py  gitleaks.toml  initial_data.py  mypy.ini  prestart.py  pyproject.toml  pytest.ini  requirements.dev.env.txt  requirements.dev.txt  requirements.txt  start.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  pre-commit.yml
alembic/: env.py
alembic/versions/: 009f6d32cf44_first_revision.py  06ebefa81a2b_updated_hotspot_content.py  079ba740b9e5_updated_table_tracking_link_and_client_.py  1bc48e91aa39_added_styleguide_column_to_clients_table.py  1e4c0ac33646_initial_database.py  28c1293e8cb2_updated_table_tracking_link_with_url_.py  355f1987cdd3_update_bdx_feed_with_xml_file_key.py  4087de0ca8d4_switched_go_ads_relationship_with_.py  4361e9f96696_added_is_active_flag_to_client_note_.py  494b702c2db7_initial_build.py  4bb1a741a074_removed_mysql_dependencies_to_pass_.py  4d5d93c6db26_updated_table_tracking_link_with_url_.py  50b5629e4853_removed_go_sc_metrics_and_removed_.py  5a51fa1fe0d6_initial_db_state.py  5ad33d8352c3_made_client_tracking_link_a_one_to_many_.py  5b0d22ef9a92_.py  62e60213be7b_.py  62f1a9ce7b95_initial_database_state.py  64b9b1ebb3ee_updated_tracking_links_col_str_length.py  67ab88f410ce_added_website_id_to_ga4_stream_removed_.py  6832c0e76f58_initial_encrypted_db.py  6e7e0054b940_initial_db_state.py  728b15987040_added_in_id_col_for_secondary_table_.py  76e67965f807_.py  78751290f43d_initial_db.py  7a37c4da2a88_added_roles_to_user_table_and_removed_.py  7a61307f0405_client_id_optional_on_data_buckets.py  84d3e3934aca_made_tracking_link_s_client_id_.py  878fb66794d9_initial_database.py  88e10e674783_added_table_tracking_link_and_client_.py  8d2203595f7e_updated_website_keyword_tables_and_.py  94b49836df08_rebuilt_fixed_fk_on_website_go_ads.py  9e3b8c0f26cb_.py  a006ff43d0a4_removed_bdx_and_sharpspring_api_tables.py  a96ee1c171cb_db_base.py  adde86a4bbbe_initial_build.py  b7f0de526452_altered_tracking_links_db_table.py  b94c90799e40_initial_db.py  b98b0f62cf71_rebuilding_api_structure_db_draft_1.py  c81c1a0d9206_initial_db.py  (+10 more)
app/: __init__.py  app_cert.pem  app_key.pem  broker.py  initial_data.py  main.py  prestart.py  worker.py
app/api/: __init__.py  deps.py  endpoints_v1.py  errors.py  exceptions.py  get_query.py  middleware.py  monitoring.py  openapi.py  paginate.py  utilities.py  utils.py
app/cli/: app.py  coro.py  db.py  items.py  secure.py
app/config/: __init__.py  api.py  cloud.py  database.py  mail.py
app/core/: __init__.py  auth.py  celery.py  celery_app.py  config.py  crud.py  email.py  errors.py  exceptions.py  ipinfo.py  logger.py  pagination.py  redis.py  schema.py  templates.py  user_crud.py  user_manager.py
app/crud/: __init__.py  base.py  bdx_feed.py  client.py  client_bucket.py  client_platform.py  client_report.py  client_report_note.py  client_styleguide.py  client_tracking_link.py  client_website.py  data_bucket.py  file_asset.py  gcft.py  gcft_snap.py  gcft_snap_activeduration.py  gcft_snap_browserreport.py  gcft_snap_hotspotclick.py  gcft_snap_trafficsource.py  gcft_snap_view.py  geocoord.py  go_a4.py  go_a4_stream.py  go_ads.py  go_cloud.py  go_sc.py  go_sc_country.py  go_sc_device.py  go_sc_metrics.py  go_sc_page.py  go_sc_query.py  go_sc_searchappearance.py  go_ua.py  go_ua_view.py  ipaddress.py  note.py  platform.py  sharpspring.py  tracking_link.py  user.py  (+9 more)
app/db/: base.py  base_class.py  commands.py  constants.py  custom_types.py  custom_types_encrypt.py  errors.py  init_db.py  session.py  user_db.py  utilities.py  validators.py
app/models/: __init__.py  bdx_feed.py  client.py  client_bucket.py  client_platform.py  client_report.py  client_report_note.py  client_styleguide.py  client_tracking_link.py  client_website.py  data_bucket.py  file_asset.py  gcft.py  gcft_snap.py  gcft_snap_activeduration.py  gcft_snap_browserreport.py  gcft_snap_hotspotclick.py  gcft_snap_trafficsource.py  gcft_snap_view.py  geocoord.py  go_a4.py  go_a4_stream.py  go_ads.py  go_cloud.py  go_sc.py  go_sc_country.py  go_sc_device.py  go_sc_page.py  go_sc_query.py  go_sc_searchappearance.py  go_ua.py  go_ua_view.py  imageupload.py  ipaddress.py  note.py  platform.py  sharpspring.py  tracking_link.py  user.py  user_client.py  (+8 more)
app/schemas/: __init__.py  base.py  bdx_feed.py  celery_tasks.py  client.py  client_bucket.py  client_platform.py  client_report.py  client_report_note.py  client_styleguide.py  client_tracking_link.py  client_website.py  data_bucket.py  file_asset.py  gcft.py  gcft_snap.py  gcft_snap_activeduration.py  gcft_snap_browserreport.py  gcft_snap_hotspotclick.py  gcft_snap_trafficsource.py  gcft_snap_view.py  geocoord.py  go.py  go_a4.py  go_a4_stream.py  go_ads.py  go_cloud.py  go_sc.py  go_sc_country.py  go_sc_device.py  go_sc_metrics.py  go_sc_page.py  go_sc_query.py  go_sc_searchappearance.py  go_ua.py  go_ua_view.py  ipaddress.py  note.py  platform.py  security.py  (+14 more)
app/security/: __init__.py  password.py
app/tasks/: __init__.py  background.py  core_tasks.py  data_buckets.py  user_tasks.py  website_tasks.py
app/tests/: conftest.py
app/utilities/: __init__.py  dates_and_time.py  paginate.py  regex.py  route_map.py  uuids.py
app/worker/: __init__.py  celery.py
docs/: endpoints.txt  gcapi_schema_graph
scripts/: build-test.sh  build.sh  clean-cache.sh  format-app.sh  format-imports.sh  format-tests.sh  format.sh  lint-app.sh  lint-tests.sh  lint.sh  ruff-check.sh  ruff-fix.sh  ruff-format.sh  run.sh  test-cov.sh  test.sh
tests/: conftest.py
tests/api/: test_deps.py
tests/constants/: limits.py  schema.py
tests/core/: test_emails.py  test_redis.py  test_utilities.py  test_utilities_website.py  test_worker.py  test_worker_website_psi.py
tests/crud/: test_base_crud.py  test_bdx_feed.py  test_client.py  test_client_bucket.py  test_client_report.py  test_client_report_note.py  test_client_website.py  test_data_bucket.py  (+27 more)
(+1187 files in other folders)
