[tool.poetry]
name = "gcapi-backend"
version = "0.1.0"
description = ""
authors = ["Joey Grable <hello@joeygrable.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {version = "0.24.0.post1", extras = ["standard"]}
gunicorn = "^21.2.0"
greenlet = "3.0.1"
requests = "^2.31.0"
types-requests = "^2.31.0.10"
cryptography = "41.0.7"
bcrypt = "^4.0.0"
types-passlib = "^1.7.7"
python-jose = "^3.3.0"
PyJWT = "^2.4.0"
itsdangerous = "^2.1.2"
rsa = "^4.9"
pycryptodome = "^3.19.0"
asgi-correlation-id = "^4.1.0"
asgi-lifespan = "^2.0.0"
fastapi = "0.104.1"
fastapi-mail = {extras = ["aioredis"], version = "^1.4.1"}
email-validator = "2.1.0.post1"
pydantic = {version = "2.4.2", extras = ["email"]}
pydantic-settings = "^2.0.3"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"
PyMySQL = "1.1.0"
SQLAlchemy = {version = "2.0.23", extras = ["mypy", "asyncio"]}
SQLAlchemy-Utils = "0.41.1"
alembic = "1.12.1"
celery = "^5.3.6"
redis = "^5.0.0"
types-redis = "^4.6.0.10"
aioredis = "^2.0.1"
Jinja2 = "3.1.2"
anyio = {version = "3.7.1", extras = ["trio"]}
asyncio = "3.4.3"
aiohttp = "3.9.1"
aiosqlite = "0.19.0"
aiomysql = "0.2.0"
aiofiles = "23.2.1"
ultimate-sitemap-parser = "^0.5"
tenacity = "^8.2.2"
sentry-sdk = {version = "^1.35.0", extras = ["fastapi"]}
ruff = "^0.1.5"
typer = "^0.9.0"
sqlalchemy-data-model-visualizer = "^0.1.3"

[tool.poetry.group.dev.dependencies]
httpx = "0.23.3"
httpx-oauth = "0.11.2"
pytest = "7.4.3"
pytest-asyncio = "0.23.2"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
pytest-redis = "^3.0.2"
autopep8 = "2.0.4"
pep8 = "1.7.1"
mypy = "1.7.0"
isort = "5.13.2"
black = "23.11.0"
flake8 = "6.0.0"
autoflake = "2.2.1"
makefun = "^1.15.1"
asgi-lifespan = "^2.0.0"
pytest-celery = "^0.0.0"

[tool.isort]
profile = "black"
src_paths = ["app"]
combine_as_imports = true
line_length = 88

[tool.black]
profile = "black"
src_paths = ["app"]
combine_as_imports = true
line_length = 88

[tool.mypy]
python_version = 3.11
ignore_missing_imports = false
disallow_untyped_defs = true
allow_redefinition = true
plugins = '''
    pydantic.mypy,
    sqlalchemy.ext.mypy.plugin
'''

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
exclude='''
    __init__.py
'''

[tool.flake8]
max-line-length = 88
exclude = '''
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache
'''

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = ["ignore:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning", "error"]
plugins = '''
    --cov-config=.coveragerc
    --cov=app
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
    --asyncio-mode=auto
    tests
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
