[tool.poetry]
name = "gcapi-backend"
version = "0.1.0"
description = ""
authors = ["Joey Grable <hello@joeygrable.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {version = "0.30.3", extras = ["standard"]}
gunicorn = "^22.0.0"
greenlet = "3.0.3"
requests = "^2.32.0"
types-requests = "^2.31.0.10"
cryptography = "42.0.7"
bcrypt = "^4.1.3"
types-passlib = "^1.7.7"
PyJWT = "^2.4.0"
itsdangerous = "^2.1.2"
rsa = "^4.9"
pycryptodome = "^3.19.1"
asgi-correlation-id = "^4.3.3"
asgi-lifespan = "^2.0.0"
fastapi = "0.111.0"
fastapi-mail = {version = "^1.4.1"}
email-validator = "2.1.1"
pydantic = {version = "2.7.1", extras = ["email"]}
pydantic-settings = "^2.0.3"
python-multipart = "0.0.9"
python-dotenv = "1.0.1"
PyMySQL = "1.1.1"
SQLAlchemy = {version = "2.0.30", extras = ["mypy", "asyncio"]}
SQLAlchemy-Utils = "0.41.2"
alembic = "1.13.1"
redis = "^5.0.0"
types-redis = "^4.6.0.20240106"
Jinja2 = "3.1.4"
anyio = {version = "4.3.0", extras = ["trio"]}
asyncio = "3.4.3"
aiohttp = "3.9.5"
aiosqlite = "0.19.0"
aiomysql = "0.2.0"
aiofiles = "23.2.1"
ultimate-sitemap-parser = "^0.5"
tenacity = "^8.2.2"
sentry-sdk = {version = "^2.11.0", extras = ["fastapi"]}
ruff = "^0.4.3"
typer = "^0.12.3"
sqlalchemy-data-model-visualizer = "^0.1.3"
taskiq = {version = "^0.11.6", extras = ["orjson", "reload"]}
taskiq-redis = "^1.0.0"
ipinfo = "^5.0.1"
pydantic-extra-types = "^2.7.0"
pycountry = "^23.12.11"
fastapi-profiler = "^1.3.0"
lxml = "^5.2.1"
lxml-stubs = "^0.5.1"
asyncer = "^0.0.7"
google-api-python-client = "^2.127.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
google-auth-stubs = "^0.2.0"
google-api-python-client-stubs = "^1.25.0"
botocore = "^1.34.113"
boto3 = "^1.34.103"
boto3-stubs = "^1.34.103"
botocore-stubs = "^1.34.94"

[tool.poetry.group.dev.dependencies]
httpx = "0.27.0"
httpx-oauth = "0.14.1"
pytest = "8.3.2"
pytest-asyncio = "0.21.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-redis = "^3.0.2"
autopep8 = "2.2.0"
pep8 = "1.7.1"
mypy = "1.10.0"
isort = "5.13.2"
black = "24.4.2"
flake8 = "7.0.0"
autoflake = "2.3.1"
makefun = "^1.15.1"
asgi-lifespan = "^2.0.0"

[tool.isort]
profile = "black"
src_paths = ["app"]
combine_as_imports = true
line_length = 88

[tool.black]
line_length = 88

[tool.mypy]
python_version = 3.11
ignore_missing_imports = false
disallow_untyped_defs = true
allow_redefinition = true
plugins = '''
    pydantic.mypy,
    sqlalchemy.ext.mypy.plugin
'''

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
exclude='''
    __init__.py
'''

[tool.flake8]
max-line-length = 88
exclude = '''
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache
'''

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=pytest",
]
testpaths = "tests"
filterwarnings = ["ignore:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning", "error"]
plugins = '''
    --cov-config=.coveragerc
    --cov=app
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
    --asyncio-mode=auto
    tests
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
